# nrvna-ai

./: .gitignore  ADVANCED.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md
cli/: agent-main.cpp  agent-tools.cpp  flw.cpp  nrvna-web.cpp  nrvnad.cpp  wrk.cpp
docs/: index.html
include/nrvna/: README.md  flow.hpp  llama_stub.hpp  logger.hpp  meta.hpp  monitor.hpp  pool.hpp  processor.hpp  runner.hpp  runner_tts.hpp  scanner.hpp  server.hpp  types.hpp  work.hpp
scripts/: ask  compact  models  refine  watch
src/: flow.cpp  llama_util.hpp  logger.cpp  meta.cpp  pool.cpp  processor.cpp  runner.cpp  runner_tts.cpp  scanner.cpp  server.cpp  work.cpp
